4. Адаптивные сетки 4.8. Адаптивная сетка для главной страницы

--- a/source/form.html
+++ b/source/form.html
@@ -116,7 +116,7 @@
               <li class="reviews__li">
                 <p class="reviews__data">
                   <label class="reviews__label" for="user-patronymic">Отчество:</label>
-                  <input class="reviews__input" id="user-patronymic" type="text" name="userЗatronymic"
+                  <input class="reviews__input" id="user-patronymic" type="text" name="userPatronymic"
                     placeholder="Александрович" tabindex="0">
                 </p>
               </li>
@@ -129,7 +129,7 @@
             <ul class="reviews__items">
               <li class="reviews__li">
                 <p class="reviews__data reviews__data-contact reviews__label-phone">
-                  <label class="reviews__label reviews__label-contact " for="user-phone">Контактный телефон*:</label>
+                  <label class="reviews__label reviews__label-contact" for="user-phone">Контактный телефон*:</label>
                   <input class="reviews__input" id="user-phone" type="text" name="userPhone"
                     placeholder="Введите телефон" required tabindex="0">
                 </p>
@@ -198,7 +198,7 @@
               </li>
               <li class="reviews__li">
                 <p class="reviews__data">
-                  <input class="reviews__label-checkbox" value="rocks" type="checkbox" name="rocks" id="filter-rocks">
+                  <input class="reviews__label-checkbox" value="rocks" type="checkbox" name="emotion" id="filter-rocks">
                   <label class="reviews__input-checkbox" for="filter-rocks">Красные скалы</label>
                 </p>
               </li>
