--- a/source/form.html
+++ b/source/form.html
@@ -34,6 +34,14 @@
               Фото и видео
             </a>
           </li>
+          <li class="menu__items menu__items-logo">
+            <a class="menu__logo" href="index.html">
+              <picture>
+                <source type="image/svg+xml" media="(min-width: 1200px)" srcset="img/logotype-desktop.svg">
+                <img src="img/logotype-tablet.svg" alt="Логотип «Седона»">
+              </picture>
+            </a>
+          </li>
           <li class="menu__items">
             <a class="menu__link">
               Форма Отзыва
@@ -70,7 +78,12 @@
         «Седона»
       </h2>
       <div class="sedona__wrapper">
-        <img class="sedona__main" src="img/sedona-header-background-form.svg" width="229" height="39" alt="«Седона»">
+        <picture>
+          <source type="image/svg+xml" media="(min-width: 1200px)"
+            srcset="img/sedona-header-background-form-desktop.svg">
+          <source type="image/svg+xml" media="(min-width: 768px)" srcset="img/sedona-header-background-form-tablet.svg">
+          <img class="sedona__main" src="img/sedona-header-background-form.svg" alt="«Седона»">
+        </picture>
       </div>
     </section>
     <!-- «Седона» end -->
@@ -94,118 +107,122 @@
       </div>
       <div class="reviews__menu">
         <form class="reviews__form" action="https://echo.htmlacademy.ru" method="post">
-          <fieldset class="reviews__style">
-            <legend class="reviews__legend">
-              Представьтесь:
-            </legend>
-            <ul class="reviews__items">
-              <li class="reviews__li">
-                <p class="reviews__data">
-                  <label class="reviews__label" for="user-name">ИМЯ*:</label>
-                  <input class="reviews__input" id="user-name" type="text" name="userName" placeholder="Петр" required
-                    tabindex="0">
-                </p>
-              </li>
-              <li class="reviews__li">
-                <p class="reviews__data">
-                  <label class="reviews__label" for="user-surname">ФАМИЛИЯ*:</label>
-                  <input class="reviews__input" id="user-surname" type="text" name="userSurname" placeholder="Иванов"
-                    required tabindex="0">
-                </p>
-              </li>
-              <li class="reviews__li">
-                <p class="reviews__data">
-                  <label class="reviews__label" for="user-patronymic">Отчество:</label>
-                  <input class="reviews__input" id="user-patronymic" type="text" name="userPatronymic"
-                    placeholder="Александрович" tabindex="0">
-                </p>
-              </li>
-            </ul>
-          </fieldset>
-          <fieldset class="reviews__style">
-            <legend class="reviews__legend">
-              Контактная информация:
-            </legend>
-            <ul class="reviews__items">
-              <li class="reviews__li">
-                <p class="reviews__data reviews__data-contact reviews__label-phone">
-                  <label class="reviews__label reviews__label-contact" for="user-phone">Контактный телефон*:</label>
-                  <input class="reviews__input" id="user-phone" type="text" name="userPhone"
-                    placeholder="Введите телефон" required tabindex="0">
-                </p>
-              </li>
-              <li class="reviews__li">
-                <p class="reviews__data reviews__data-contact reviews__label-email">
-                  <label class="reviews__label reviews__label-contact " for="user-email">Электронная почта*:</label>
-                  <input class="reviews__input" id="user-email" type="email" name="userEmail"
-                    placeholder="Введите e-mail" required tabindex="0">
-                </p>
-              </li>
-            </ul>
-          </fieldset>
-          <fieldset class="reviews__style">
-            <legend class="reviews__legend">
-              ВАше Общее впечатление:
-            </legend>
-            <ul class="reviews__items">
-              <li class="reviews__li">
-                <p class="reviews__data">
-                  <input class="reviews__label-radio" value="positive" type="radio" name="impression"
-                    id="filter-positive" checked>
-                  <label class="reviews__input-radio" for="filter-positive">Скорее положительное</label>
-                </p>
-              </li>
-              <li class="reviews__li">
-                <p class="reviews__data">
-                  <input class="reviews__label-radio" value="negative" type="radio" name="impression"
-                    id="filter-negative">
-                  <label class="reviews__input-radio" for="filter-negative">Скорее отрицательное</label>
-                </p>
-              </li>
-              <li class="reviews__li">
-                <p class="reviews__data">
-                  <input class="reviews__label-radio" value="hard" type="radio" name="impression" id="filter-hard">
-                  <label class="reviews__input-radio" for="filter-hard">Затрудняюсь ответить</label>
-                </p>
-              </li>
-            </ul>
-          </fieldset>
-          <fieldset class="reviews__style">
-            <legend class="reviews__legend">
-              посещенные достопримечательности:
-            </legend>
-            <ul class="reviews__items">
-              <li class="reviews__li">
-                <p class="reviews__data">
-                  <input class="reviews__label-checkbox" value="bridge" type="checkbox" name="emotion"
-                    id="filter-bridge" checked>
-                  <label class="reviews__input-checkbox" for="filter-bridge">Мост Дьявола</label>
-                </p>
-              </li>
-              <li>
-                <p class="reviews__data">
-                  <input class="reviews__label-checkbox" value="mountain" type="checkbox" name="emotion"
-                    id="filter-mountain" checked>
-                  <label class="reviews__input-checkbox" for="filter-mountain">Гора-Колокол</label>
-                </p>
-              </li>
-              <li class="reviews__li">
-                <p class="reviews__data">
-                  <input class="reviews__label-checkbox" value="slide" type="checkbox" name="emotion" id="filter-slide"
-                    checked>
-                  <label class="reviews__input-checkbox" for="filter-slide">Слайд-парк</label>
-                </p>
-              </li>
-              <li class="reviews__li">
-                <p class="reviews__data">
-                  <input class="reviews__label-checkbox" value="rocks" type="checkbox" name="emotion" id="filter-rocks">
-                  <label class="reviews__input-checkbox" for="filter-rocks">Красные скалы</label>
-                </p>
-              </li>
-            </ul>
-          </fieldset>
-          <fieldset class="reviews__style">
-            <legend class="reviews__legend">
+          <div class="reviews__form-wrapper">
+            <fieldset class="reviews__style reviews__group">
+              <legend class="reviews__legend">
+                Представьтесь:
+              </legend>
+              <ul class="reviews__items">
+                <li class="reviews__li">
+                  <p class="reviews__data">
+                    <label class="reviews__label" for="user-name">ИМЯ*:</label>
+                    <input class="reviews__input" id="user-name" type="text" name="userName" placeholder="Петр" required
+                      tabindex="0">
+                  </p>
+                </li>
+                <li class="reviews__li">
+                  <p class="reviews__data">
+                    <label class="reviews__label" for="user-surname">ФАМИЛИЯ*:</label>
+                    <input class="reviews__input" id="user-surname" type="text" name="userSurname" placeholder="Иванов"
+                      required tabindex="0">
+                  </p>
+                </li>
+                <li class="reviews__li">
+                  <p class="reviews__data">
+                    <label class="reviews__label" for="user-patronymic">Отчество:</label>
+                    <input class="reviews__input" id="user-patronymic" type="text" name="userPatronymic"
+                      placeholder="Александрович" tabindex="0">
+                  </p>
+                </li>
+              </ul>
+            </fieldset>
+            <fieldset class="reviews__style reviews__style-group reviews__style-contact reviews__group">
+              <legend class="reviews__legend reviews__legend-group">
+                Контактная информация:
+              </legend>
+              <ul class="reviews__items reviews__items-contact">
+                <li class="reviews__li">
+                  <p class="reviews__data reviews__data-contact reviews__label-phone reviews__li-contact">
+                    <label class="reviews__label reviews__label-contact" for="user-phone">Контактный телефон*:</label>
+                    <input class="reviews__input" id="user-phone" type="text" name="userPhone"
+                      placeholder="Введите телефон" required tabindex="0">
+                  </p>
+                </li>
+                <li class="reviews__li reviews__li-contact">
+                  <p class="reviews__data reviews__data-contact reviews__label-email reviews__li-contact">
+                    <label class="reviews__label reviews__label-contact" for="user-email">Электронная почта*:</label>
+                    <input class="reviews__input" id="user-email" type="email" name="userEmail"
+                      placeholder="Введите e-mail" required tabindex="0">
+                  </p>
+                </li>
+              </ul>
+            </fieldset>
+            <span class="reviews__line reviews__group"></span>
+            <fieldset class="reviews__style reviews__group">
+              <legend class="reviews__legend">
+                ВАше Общее впечатление:
+              </legend>
+              <ul class="reviews__items">
+                <li class="reviews__li">
+                  <p class="reviews__data">
+                    <input class="reviews__label-radio" value="positive" type="radio" name="impression"
+                      id="filter-positive" checked>
+                    <label class="reviews__input-radio" for="filter-positive">Скорее положительное</label>
+                  </p>
+                </li>
+                <li class="reviews__li">
+                  <p class="reviews__data">
+                    <input class="reviews__label-radio" value="negative" type="radio" name="impression"
+                      id="filter-negative">
+                    <label class="reviews__input-radio" for="filter-negative">Скорее отрицательное</label>
+                  </p>
+                </li>
+                <li class="reviews__li">
+                  <p class="reviews__data">
+                    <input class="reviews__label-radio" value="hard" type="radio" name="impression" id="filter-hard">
+                    <label class="reviews__input-radio" for="filter-hard">Затрудняюсь ответить</label>
+                  </p>
+                </li>
+              </ul>
+            </fieldset>
+            <fieldset class="reviews__style  reviews__style-group reviews__group">
+              <legend class="reviews__legend reviews__legend-group reviews__legend-special">
+                посещенные достопримечательности:
+              </legend>
+              <ul class="reviews__items reviews__items-place">
+                <li class="reviews__li">
+                  <p class="reviews__data">
+                    <input class="reviews__label-checkbox" value="bridge" type="checkbox" name="emotion"
+                      id="filter-bridge" checked>
+                    <label class="reviews__input-checkbox" for="filter-bridge">Мост Дьявола</label>
+                  </p>
+                </li>
+                <li>
+                  <p class="reviews__data">
+                    <input class="reviews__label-checkbox" value="mountain" type="checkbox" name="emotion"
+                      id="filter-mountain" checked>
+                    <label class="reviews__input-checkbox" for="filter-mountain">Гора-Колокол</label>
+                  </p>
+                </li>
+                <li class="reviews__li">
+                  <p class="reviews__data">
+                    <input class="reviews__label-checkbox" value="slide" type="checkbox" name="emotion"
+                      id="filter-slide" checked>
+                    <label class="reviews__input-checkbox" for="filter-slide">Слайд-парк</label>
+                  </p>
+                </li>
+                <li class="reviews__li">
+                  <p class="reviews__data">
+                    <input class="reviews__label-checkbox" value="rocks" type="checkbox" name="emotion"
+                      id="filter-rocks">
+                    <label class="reviews__input-checkbox" for="filter-rocks">Красные скалы</label>
+                  </p>
+                </li>
+              </ul>
+            </fieldset>
+          </div>
+          <fieldset class="reviews__style reviews__style-group">
+            <legend class="reviews__legend reviews__legend-group">
               Опишите свои эмоции:
             </legend>
             <ul class="reviews__items">
@@ -222,6 +239,9 @@
           </fieldset>
           <div class="reviews__button">
             <button class="reviews__pin" id="button" type="submit" tabindex="0">ОТПРАВИТЬ ОТЗЫВ</button>
+            <p class="reviews__button-required">
+              * — обязательные поля
+            </p>
           </div>
         </form>
       </div>
@@ -248,7 +268,7 @@
       </h2>
       <ul class="social__items">
         <li class="social__item">
-          <a class="social__link" href="#">
+          <a class="social__link social__link-twitter" href="#">
             <p class="visually-hidden">
               Твиттер
             </p>
@@ -256,7 +276,7 @@
           </a>
         </li>
         <li class="social__item">
-          <a class="social__link" href="#">
+          <a class="social__link social__link-facebook" href="#">
             <p class="visually-hidden">
               Фейсбук
             </p>
@@ -264,7 +284,7 @@
           </a>
         </li>
         <li class="social__sitem">
-          <a class="social__link" href="#">
+          <a class="social__link social__link-youtube" href="#">
             <p class="visually-hidden">
               Ютуб
             </p>
